--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="#" class="btn">Apply Online</a>
       </div>
       <div class="landing-img">
-        <img src="./assets/graduation.jpg" alt="graduation-img" />
+        <img src="./assets/graduation-rbg.png" alt="graduation-img" />
       </div>
       <div class="clear"></div>
     </section>
