--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li>Our Services</li>
           <li>Responsibilities</li>
           <li>Country</li>
+          <li id="theme">Change Theme</li>
           <li class="btn"><a class="btn" href="#apply">Apply</a></li>
         </ul>
       </nav>
@@ -135,83 +136,6 @@
         </p>
       </div>
       <div class="news-cards">
-        <div class="news-card">
-          <div class="card-img">
-            <img src="./assets/Rectangle3.png" alt="water-img" />
-          </div>
-          <div class="card-info">
-            <?xml version="1.0" encoding="iso-8859-1"?>
-            <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg
-              fill="#000000"
-              height="800px"
-              width="800px"
-              version="1.1"
-              id="Capa_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 331.37 331.37"
-              xml:space="preserve"
-            >
-              <g>
-                <g id="Layer_5_15_">
-                  <g>
-                    <g>
-                      <path
-                        d="M111.374,188.961c0,4.956-4.055,9.01-9.01,9.01H57.313c-4.955,0-9.01-4.055-9.01-9.01v-30.113
-					c0-4.956,4.055-9.01,9.01-9.01h45.051c4.956,0,9.01,4.055,9.01,9.01V188.961z"
-                      />
-                      <path
-                        d="M111.374,268.091c0,4.956-4.055,9.01-9.01,9.01H57.313c-4.955,0-9.01-4.055-9.01-9.01v-30.113
-					c0-4.956,4.055-9.01,9.01-9.01h45.051c4.956,0,9.01,4.055,9.01,9.01V268.091z"
-                      />
-                    </g>
-                    <g>
-                      <path
-                        d="M197.222,188.961c0,4.956-4.055,9.01-9.01,9.01H143.16c-4.956,0-9.01-4.055-9.01-9.01v-30.113
-					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V188.961z"
-                      />
-                      <path
-                        d="M197.222,268.091c0,4.956-4.055,9.01-9.01,9.01H143.16c-4.956,0-9.01-4.055-9.01-9.01v-30.113
-					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V268.091z"
-                      />
-                    </g>
-                    <g>
-                      <path
-                        d="M282.018,188.961c0,4.956-4.055,9.01-9.01,9.01h-45.052c-4.956,0-9.01-4.055-9.01-9.01v-30.113
-					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V188.961z"
-                      />
-                      <path
-                        d="M282.018,268.091c0,4.956-4.055,9.01-9.01,9.01h-45.052c-4.956,0-9.01-4.055-9.01-9.01v-30.113
-					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V268.091z"
-                      />
-                    </g>
-                    <path
-                      d="M70.786,82.453c-5.383,0-9.787-4.404-9.787-9.788V19.697c0-5.384,4.404-9.788,9.787-9.788h20.361
-				c5.383,0,9.788,4.404,9.788,9.788v52.968c0,5.383-4.404,9.788-9.788,9.788H70.786z"
-                    />
-                    <path
-                      d="M240.301,82.453c-5.383,0-9.787-4.404-9.787-9.788V19.697c0-5.384,4.404-9.788,9.787-9.788h20.361
-				c5.383,0,9.788,4.404,9.788,9.788v52.968c0,5.383-4.404,9.788-9.788,9.788H240.301z"
-                    />
-                    <path
-                      d="M321.917,49.935c0,0-16.16,0-28.491,0c-1.628,0-4.64,0-4.64,3.753v16.754c0,15.996-8.86,29.01-29.01,29.01h-18.745
-				c-19.106,0-29.01-13.014-29.01-29.01l0.001-15.879c0-3-2.096-4.628-4.596-4.628c-23.869,0-58.035,0-82.751,0
-				c-1.836,0-5.326,0-5.326,4.753v15.754c0,15.996-7.976,29.01-29.01,29.01H71.594c-23.292,0-29.01-13.014-29.01-29.01V55.313
-				c0-4.25-3.826-5.378-5.909-5.378c-12.187,0-27.221,0-27.221,0C4.254,49.935,0,54.189,0,66.393v252.618
-				c0-1.804,4.254,2.45,9.454,2.45h312.462c5.2,0,9.454-4.254,9.454-2.45V66.393C331.37,54.189,327.116,49.935,321.917,49.935z
-        M310.362,290.998c0,5.2-4.254,9.454-9.454,9.454H30.463c-5.2,0-9.454-4.254-9.454-9.454V134.464c0-5.2,4.254-9.454,9.454-9.454
-				h270.445c5.2,0,9.454,4.254,9.454,9.454V290.998z"
-                    />
-                  </g>
-                </g>
-              </g>
-            </svg>
-            <p>17 Apr 2023</p>
-            <div class="clear"></div>
-            <h4>Come On In. The Water's Fine</h4>
-          </div>
-        </div>
         <div class="news-card">
           <div class="card-img">
             <img src="./assets/Rectangle1.png" alt="water-img" />
@@ -440,6 +364,82 @@
             <h4>Come On In. The Water's Fine</h4>
           </div>
         </div>
+        <div class="news-card">
+          <div class="card-img">
+            <img src="./assets/Rectangle3.png" alt="water-img" />
+          </div>
+          <div class="card-info">
+            <?xml version="1.0" encoding="iso-8859-1"?>
+            <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+            <svg
+              fill="#000000"
+              height="800px"
+              width="800px"
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 331.37 331.37"
+              xml:space="preserve"
+            >
+              <g>
+                <g id="Layer_5_15_">
+                  <g>
+                    <g>
+                      <path
+                        d="M111.374,188.961c0,4.956-4.055,9.01-9.01,9.01H57.313c-4.955,0-9.01-4.055-9.01-9.01v-30.113
+					c0-4.956,4.055-9.01,9.01-9.01h45.051c4.956,0,9.01,4.055,9.01,9.01V188.961z"
+                      />
+                      <path
+                        d="M111.374,268.091c0,4.956-4.055,9.01-9.01,9.01H57.313c-4.955,0-9.01-4.055-9.01-9.01v-30.113
+					c0-4.956,4.055-9.01,9.01-9.01h45.051c4.956,0,9.01,4.055,9.01,9.01V268.091z"
+                      />
+                    </g>
+                    <g>
+                      <path
+                        d="M197.222,188.961c0,4.956-4.055,9.01-9.01,9.01H143.16c-4.956,0-9.01-4.055-9.01-9.01v-30.113
+					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V188.961z"
+                      />
+                      <path
+                        d="M197.222,268.091c0,4.956-4.055,9.01-9.01,9.01H143.16c-4.956,0-9.01-4.055-9.01-9.01v-30.113
+					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V268.091z"
+                      />
+                    </g>
+                    <g>
+                      <path
+                        d="M282.018,188.961c0,4.956-4.055,9.01-9.01,9.01h-45.052c-4.956,0-9.01-4.055-9.01-9.01v-30.113
+					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V188.961z"
+                      />
+                      <path
+                        d="M282.018,268.091c0,4.956-4.055,9.01-9.01,9.01h-45.052c-4.956,0-9.01-4.055-9.01-9.01v-30.113
+					c0-4.956,4.055-9.01,9.01-9.01h45.052c4.956,0,9.01,4.055,9.01,9.01V268.091z"
+                      />
+                    </g>
+                    <path
+                      d="M70.786,82.453c-5.383,0-9.787-4.404-9.787-9.788V19.697c0-5.384,4.404-9.788,9.787-9.788h20.361
+				c5.383,0,9.788,4.404,9.788,9.788v52.968c0,5.383-4.404,9.788-9.788,9.788H70.786z"
+                    />
+                    <path
+                      d="M240.301,82.453c-5.383,0-9.787-4.404-9.787-9.788V19.697c0-5.384,4.404-9.788,9.787-9.788h20.361
+				c5.383,0,9.788,4.404,9.788,9.788v52.968c0,5.383-4.404,9.788-9.788,9.788H240.301z"
+                    />
+                    <path
+                      d="M321.917,49.935c0,0-16.16,0-28.491,0c-1.628,0-4.64,0-4.64,3.753v16.754c0,15.996-8.86,29.01-29.01,29.01h-18.745
+				c-19.106,0-29.01-13.014-29.01-29.01l0.001-15.879c0-3-2.096-4.628-4.596-4.628c-23.869,0-58.035,0-82.751,0
+				c-1.836,0-5.326,0-5.326,4.753v15.754c0,15.996-7.976,29.01-29.01,29.01H71.594c-23.292,0-29.01-13.014-29.01-29.01V55.313
+				c0-4.25-3.826-5.378-5.909-5.378c-12.187,0-27.221,0-27.221,0C4.254,49.935,0,54.189,0,66.393v252.618
+				c0-1.804,4.254,2.45,9.454,2.45h312.462c5.2,0,9.454-4.254,9.454-2.45V66.393C331.37,54.189,327.116,49.935,321.917,49.935z
+        M310.362,290.998c0,5.2-4.254,9.454-9.454,9.454H30.463c-5.2,0-9.454-4.254-9.454-9.454V134.464c0-5.2,4.254-9.454,9.454-9.454
+				h270.445c5.2,0,9.454,4.254,9.454,9.454V290.998z"
+                    />
+                  </g>
+                </g>
+              </g>
+            </svg>
+            <p>17 Apr 2023</p>
+            <h4>Come On In. The Water's Fine</h4>
+          </div>
+        </div>
         <div class="clear"></div>
       </div>
     </section>
@@ -554,6 +554,59 @@
     </footer>
     <!-- JavaScript Code -->
     <script>
+      // Creating the Default theme
+      const changeTheme = () => {
+        if (localStorage.theme) {
+          if (localStorage.getItem("theme") === "dark") {
+            document.body.style =
+              "background-color: black; color: white; transition: 0.3s;";
+          } else {
+            document.body.style =
+              "background-color: transparent; color: black; transition: 0.3s;";
+            localStorage.setItem("theme", "light");
+          }
+        }
+      };
+
+      // services cards
+      const servicesCards = document.querySelectorAll(
+        ".services .services-cards .services-card"
+      );
+
+      const applyThemeChanges = () => {
+        servicesCards.forEach((card) => {
+          if (localStorage.theme === "dark") {
+            card.style = "background-color: #717cff;";
+            card.children[1].children[1].style.color = "white";
+            card.children[1].children[2].style.color = "#c0c0c0";
+          } else {
+            card.style = "background-color: white;";
+            card.children[1].children[1].style.color = "gray";
+            card.children[1].children[2].style.color = "#717cff";
+          }
+        });
+      };
+      // news cards
+      const newsCards = document.querySelectorAll(
+        ".news .news-cards .news-card"
+      );
+
+      const applyThemeChangesNews = () => {
+        newsCards.forEach((card) => {
+          if (localStorage.theme === "dark") {
+            card.style = "background-color: #717cff;";
+            card.children[1].children[0].style.backgroundColor = "white";
+            card.children[1].children[1].style.color = "#d3d3d3";
+            card.children[1].children[2].style.color = "white";
+          } else {
+            card.style.backgroundColor = "white";
+            card.children[1].children[0].style.backgroundColor = "transparent";
+            card.children[1].children[1].style.color = "gray";
+            card.children[1].children[2].style.color = "black";
+          }
+        });
+      };
+
       // Adding the Active Class to the Targeted li
       const lis = document.querySelectorAll("header ul li");
       lis.forEach((li) => {
@@ -567,6 +620,25 @@
           e.target.classList.add("active");
         });
       });
+
+      // Creating the Theme in Local Storage and Applying the Changes
+      const theme = document.querySelector("#theme");
+      theme.addEventListener("click", () => {
+        if (localStorage.theme === "light") {
+          localStorage.setItem("theme", "dark");
+        } else {
+          localStorage.setItem("theme", "light");
+        }
+        // Calling the functions to apply the changes after clicking directly
+        changeTheme();
+        applyThemeChanges();
+        applyThemeChangesNews();
+      });
+
+      // Displaying the Theme from local storage
+      changeTheme();
+      applyThemeChanges();
+      applyThemeChangesNews();
     </script>
   </body>
 </html>
